updated swagger 2 to openapi 3
